fixed box object allignment off screen to center

--- a/project-root/style.css
+++ b/project-root/style.css
@@ -1,54 +1,68 @@
-.top{
+.top {
     position: fixed;
     top: 0;
+    left: 0;
     width: 100%;
+    z-index: 10;
 }
 
-.header-bar{
+.header-bar {
     font-size: 12px;
-    color:black;
-    background-color:#1098F7;
+    color: black;
+    background-color: #1098F7;
     width: 100%;
-    float: left;
     padding-left: 10px;
+    box-sizing: border-box;
 }
 
-.Unity{
+.Unity {
     display: none;
     position: fixed;
-    justify-self: center;
+    left: 50%;
+    transform: translateX(-50%);
     top: 100px;
     width: 90%;
-    border-color: #1098F7;
-    border-width: 2px;
-    border-style: solid;
+    height: calc(100vh - 180px);
+    border: 2px solid #1098F7;
+    box-sizing: border-box;
+}
+
+.Unity iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
 }
 
 .start-modal {
     position: fixed;
-    justify-self: center;
-    z-index: 1;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 20;
     top: 100px;
     width: 55%;
+    max-height: calc(100vh - 180px);
+    overflow-y: auto;
     background-color: #b6daf4;
     padding: 20px;
-    border-radius: 0px;
-    border-width: 2px;
-    border-style: solid;
+    border: 2px solid black;
     text-align: center;
+    box-sizing: border-box;
 }
 
 .footer {
     position: fixed;
     bottom: 0;
+    left: 0;
     width: 100%;
     background-color: #212121;
     color: white;
     text-align: center;
     padding: 10px 0;
+    box-sizing: border-box;
+    z-index: 10;
 }
 
 body {
     margin: 0;
-    background-color: white
+    background-color: white;
 }
